# datafusion-wasi

./: .gitmodules  Cargo.toml
datafusion-client/: Cargo.toml
datafusion-client/src/: lib.rs
datafusion-server/: Cargo.toml
datafusion-server/src/: main.rs  service.rs
datafusion-wasi-proto/: Cargo.toml  build.rs
datafusion-wasi-proto/proto/: datafusionwasi.proto
datafusion-wasi-proto/src/: lib.rs
