[package]
name = "datafusion-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
tokio = { version = "1.18.1" , features = ["rt-multi-thread"]}
prost = "0.9"
arrow-format = "0.4.0"
datafusion = {git = "https://github.com/apache/arrow-datafusion" , branch = "arrow2"}
ballista-core = {git = "https://github.com/apache/arrow-datafusion" , branch = "arrow2"}