[package]
name = "datafusion-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.7.1"
tokio = { version = "1.18.1" , features = ["rt-multi-thread"]}
datafusion-wasi-proto = { path = "../datafusion-wasi-proto"}

[build-dependencies]
tonic-build = "0.7.1"
