[package]
name = "datafusion-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.18.1" , features = ["rt-multi-thread"]}
tokio-stream = "0.1.8"
arrow-format = "0.4.0"
futures = "0.3.21"
datafusion = {git = "https://github.com/apache/arrow-datafusion" , branch = "arrow2"}
ballista-core = {git = "https://github.com/apache/arrow-datafusion" , branch = "arrow2"}